@@ -1,5 +1,7 @@
 package factory_method;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * 具体工厂
  * 该角色实现了抽象工厂接口，含有与应用密切相关的逻辑，并且受到应用程序的调用以创建产品对象。
@@ -9,12 +11,12 @@ public class ConcreteCreator implements Creator {
 
     @Override
     public <T extends Product> T factory(Class<T> c) {
-        Product product = null;
+        T product = null;
         try {
-            product = (Product) Class.forName(c.getName()).newInstance();
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+            product = c.getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
             e.printStackTrace();
         }
-        return (T) product;
+        return product;
     }
 }
